src/test/ui/traits/issue-18400.stderr
error[E0689]: can't call method `contains` on ambiguous numeric type `{integer}`
  --> $DIR/issue-18400.rs:24:7
   |
LL |     0.contains(bits);
   |       ^^^^^^^^
   |
help: you must specify a concrete type for this numeric value, like `i32`
   |
LL |     0_i32.contains(bits);
   |     ~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0689`.
